# neonblue

./: .gitignore  Dockerfile  README.md  alembic.ini  demo.sh  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4d05cf15abd0_a_descriptive_message_for_the_change.py  74983ea1cb91_events_experiment_id_fk_and_relationship.py  d95adb99a2f6_remove_created_by_user_id_column_from_.py
app/: main.py
app/core/: auth.py  db.py  settings.py
app/models/orm/: __init__.py  assignment.py  base.py  event.py  experiment.py
app/models/schemas/: assignment.py  event.py  experiment.py
app/repositories/: assignment_repo.py  event_repo.py  experiment_repo.py
app/services/: event_service.py  experiment_service.py
