[project]
name = "neonblueaitest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.0",
    "fastapi>=0.119.1",
    "isort>=7.0.0",
    "mmh3>=5.2.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.44",
]
